force-app/main/default/objects/RC_student_question__c/RC_student_question__c.object-meta.xml
<CustomObject>
    <label>RC_student_question</label>
    <nameField>
        <label>RC_student_question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RC_student_questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>