force-app/main/default/objects/RC_student_question__c/fields/hasProgram__c.field-meta.xml
<CustomField>
    <fullName>hasProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasProgram</label>
    <type>Checkbox</type>
</CustomField>