force-app/main/default/objects/RC_student_question__c/fields/is_attempted__c.field-meta.xml
<CustomField>
    <fullName>is_attempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAttempted</label>
    <type>Checkbox</type>
</CustomField>