force-app/main/default/objects/RC_student_question__c/fields/isStudentAnswerdCorrect__c.field-meta.xml
<CustomField>
    <fullName>isStudentAnswerdCorrect__c</fullName>
    <formula>question_correct_answer__c ==  student_attempt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isStudentAnswerdCorrect</label>
    <type>Checkbox</type>
</CustomField>