force-app/main/default/objects/RC_student_question__c/fields/question_description__c.field-meta.xml
<CustomField>
    <fullName>question_description__c</fullName>
    <label>question_description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>