force-app/main/default/objects/RC_student_question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>question_number__c</columns>
    <columns>question_correct_answer__c</columns>
    <columns>student_attempt__c</columns>
    <columns>is_attempted__c</columns>
    <columns>isStudentAnswerdCorrect__c</columns>
    <columns>currentQuestion__c</columns>
    <columns>question_category__c</columns>
    <columns>question_difficulty__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>student_test_id__c</field>
        <operation>equals</operation>
        <value>OF-0207</value>
    </filters>
    <label>All</label>
</ListView>